# krimo

./: CMakeLists.txt
include/krimo/: EventEmitter.hpp  EventSystem.hpp  Macro.hpp  RenderingSystem.hpp  SceneTree.hpp  System.hpp  WindowSystem.hpp  krimo.hpp
include/krimo/types/: CXString.hpp  Delegate.hpp  HashString.hpp  Math.hpp  Object.hpp  Property.hpp  TypeID.hpp
include/krimo/util/: Hash.hpp
src/: EventSystem.cpp  SceneTree.cpp  System.cpp  WindowSystem.cpp  krimo.cpp
src/types/: Delegate.cpp
test/: CMakeLists.txt  Test.cpp  Test.hpp
test/bench/: HashBench.cpp
test/simple/: simple.cpp
test/types/: Types.cpp
